<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_ffffff"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_certification"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shouji" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_conner_f7f7f7"
                    android:gravity="center_vertical"
                    android:hint="@string/please_enter_your_name"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shouji" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_conner_f7f7f7"
                    android:gravity="center_vertical"
                    android:hint="@string/please_select_area"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mima" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_conner_f7f7f7"
                    android:gravity="center_vertical"
                    android:hint="@string/please_select_trade"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mima" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_conner_f7f7f7"
                    android:gravity="center_vertical"
                    android:hint="@string/please_enter_code"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/shape_conner_27a2ff"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_business"
                    android:textColor="@color/color_27a2ff"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>