<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    android:orientation="vertical">

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/followstate"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="3天未跟"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="7天未跟"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="15天未跟"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/shape_conner_f7f7f7"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:text="从未跟"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/dealprogess"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/earlyvist"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/intention"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/offer"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/deal"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/shape_conner_f7f7f7"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/cancellation"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/customlevel"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="1星"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="2星"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="3星"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/shape_conner_f7f7f7"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="4星"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_40"
                android:background="@drawable/shape_conner_93cbff_pop"
                android:text="@string/pay"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_20" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:background="@drawable/shape_conner_27a2ff_pop"
                android:text="@string/confirm"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/horizontal_line" />
</LinearLayout>