<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/hearder_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f5f5f5"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/shape_conner_ffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/reminder_time"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_20" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right_arrow" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/reminder_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:background="@drawable/shape_conner_ffffff"
                android:gravity="start"
                android:hint="@string/add_reminder_content"
                android:layout_margin="@dimen/dp_10"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>